Update for build 1.

--- a/app.json
+++ b/app.json
@@ -17,13 +17,17 @@
       "**/*"
     ],
     "ios": {
-      "supportsTablet": true
+      "supportsTablet": true,
+      "bundleIdentifier": "com.stevehoneck.grocerygetter",
+      "buildNumber": "1.0.0"
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#FFFFFF"
-      }
+      },
+      "package": "com.stevehoneck.grocerygetter",
+      "versionCode": 1
     },
     "web": {
       "favicon": "./assets/favicon.png"
