--- a/app.json
+++ b/app.json
@@ -1,6 +1,6 @@
 {
   "expo": {
-    "name": "groceryGetter",
+    "name": "Grocery Getter",
     "slug": "groceryGetter",
     "version": "1.0.0",
     "orientation": "portrait",
