--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "expo-linear-gradient": "~9.2.0",
     "expo-status-bar": "~1.0.4",
     "react": "16.13.1",
+    "react-devtools": "^4.18.0",
     "react-dom": "16.13.1",
     "react-native": "https://github.com/expo/react-native/archive/sdk-42.0.0.tar.gz",
     "react-native-animatable": "^1.3.3",
